--- a/kit/src/main/res/values/strings.xml
+++ b/kit/src/main/res/values/strings.xml
@@ -501,4 +501,14 @@
 
     <string name="rc_mention_messages">有人@我 %s</string>
     <string name="rc_media_upload_error">不能上传 0kb 的文件</string>
+
+
+    <string name="rc_plugin_sight">小视频</string>
+    <string name="rc_sight_reminder">长按录制小视频</string>
+    <string name="rc_sight_list_title">聊天文件</string>
+    <string name="rc_sight_download_failed">下载失败，点击重新下载</string>
+    <string name="rc_sight_record_too_short_time">录制时间短，请重试</string>
+    <string name="rc_sight_message_recalled">消息被撤回</string>
+    <string name="rc_save_video">保存视频</string>
+    <string name="rc_save_video_success">视频保存成功</string>
 </resources>
